feature: Include access and egress duration in "walk time" for path diff tool